--- a/part-2/start/config/packages/security.yaml
+++ b/part-2/start/config/packages/security.yaml
@@ -20,10 +20,14 @@ security:
                 check_path: app_login
                 username_path: email
                 password_path: password
+                success_handler: lexik_jwt_authentication.handler.authentication_success
+                failure_handler: lexik_jwt_authentication.handler.authentication_failure
             logout:
                 path: app_logout
             access_token:
                 token_handler: App\Security\ApiTokenHandler
+            jwt: ~
+
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
 
@@ -33,8 +37,15 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/login, roles: PUBLIC_ACCESS } # Allow access to the login page without authentication
+        - { path: ^/$, roles: PUBLIC_ACCESS } # Allow access to the root ("/") route without authentication
+        - { path: ^/, roles: IS_AUTHENTICATED_FULLY } # Require authentication for all other routes
         # - { path: ^/profile, roles: ROLE_USER }
+       # - { path: ^/$, roles: PUBLIC_ACCESS } # Allows accessing the Swagger UI
+#        - { path: ^/api, roles: IS_AUTHENTICATED_FULLY } # Allows accessing the Swagger UI docs
+#        - { path: ^/, roles: PUBLIC_ACCESS }
+#        - { path: ^/*, roles: IS_AUTHENTICATED_FULLY }
 
 when@test:
     security:
